--- a/app/forgotPassword/view/forgotPassword.html
+++ b/app/forgotPassword/view/forgotPassword.html
@@ -62,6 +62,24 @@
             </form>
         </div>
     </div>
+ <div class="modal fade" id="passwordmodal" tabindex="-1" role="dialog">
+		<div class="modal-dialog modal-sm">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">N'KaNa</h4>
+				</div>
+
+				<div class="modal-body">
+					<p class="text-center">Password changed successfully</p>
+				</div>
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </body>
 <script>
     $("#changePassword").submit(function (e) {
@@ -84,6 +102,7 @@
             "data": JSON.stringify(data),
         }
         $.ajax(settings).done(function (response) {
+                $('#passwordmodal').modal({ backdrop: 'static', keyboard: false });
             console.log("success" + response);
             return false;
         });
