forgot password issues fixed

--- a/app/forgotPassword/view/forgotPassword.html
+++ b/app/forgotPassword/view/forgotPassword.html
@@ -14,21 +14,21 @@
             color: white;
             height: 50px;
         }
-        
+
         #commonblock p {
             padding: 10px;
         }
-        
+
         body {
             background-color: #ECF1F5;
             height: 100%;
         }
-        
+
         .mainblock {
             clear: both;
             width: 80%;
         }
-        
+
         .forgotPasswordBlock {
             clear: both;
             width: 80%;
@@ -62,23 +62,23 @@
             </form>
         </div>
     </div>
- <div class="modal fade" id="passwordmodal" tabindex="-1" role="dialog">
-		<div class="modal-dialog modal-sm">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h4 class="modal-title">N'KaNa</h4>
-				</div>
+    <div class="modal fade" id="passwordmodal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">N'KaNa</h4>
+                </div>
 
-				<div class="modal-body">
-					<p class="text-center">Password changed successfully</p>
-				</div>
+                <div class="modal-body">
+                    <p class="text-center">Password changed successfully</p>
+                </div>
 
-				<div class="modal-footer">
-					<button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 <script>
@@ -87,13 +87,14 @@
     });
     var url = window.location.href;
     var id = url.substring(url.lastIndexOf('=') + 1);
+    var BASEURL = "https://nkanaapi.herokuapp.com/changePassword";
     $("#changePasswordBtn").click(function () {
         var data = {};
         data.id = id;
         data.password = $('#newPwd').val();
         var settings = {
             "crossDomain": true,
-            "url": "http://nkanaapi-sakthi3964.rhcloud.com/changePassword",
+            "url": BASEURL,
             "method": "POST",
             "headers": {
                 "content-type": "application/json",
@@ -102,7 +103,7 @@
             "data": JSON.stringify(data),
         }
         $.ajax(settings).done(function (response) {
-                $('#passwordmodal').modal({ backdrop: 'static', keyboard: false });
+            $('#passwordmodal').modal({ backdrop: 'static', keyboard: false });
             console.log("success" + response);
             return false;
         });
