email issues fixed

--- a/app/emailVerification/view/verification.html
+++ b/app/emailVerification/view/verification.html
@@ -11,6 +11,7 @@
         var BASEURL = "https://nkanaapi.herokuapp.com/"
         data.id = id;
         var settings = {
+            "async": true,
             "crossDomain": true,
             "url": "https://nkanaapi.herokuapp.com/userVerification",
             "method": "POST",
