forgot password issues fixed

--- a/app/forgotPassword/view/forgotPassword.html
+++ b/app/forgotPassword/view/forgotPassword.html
@@ -93,6 +93,7 @@
         data.id = id;
         data.password = $('#newPwd').val();
         var settings = {
+            "async": true,
             "crossDomain": true,
             "url": BASEURL,
             "method": "POST",
