--- a/app/emailVerification/view/verification.html
+++ b/app/emailVerification/view/verification.html
@@ -8,10 +8,12 @@
         var url = window.location.href;
         var id = url.substring(url.lastIndexOf('=') + 1);
         var data = {};
+        var BASEURL = "https://nkanaapi.herokuapp.com/"
         data.id = id;
         var settings = {
+            "async": true,
             "crossDomain": true,
-            "url": "http://nkanaapi-sakthi3964.rhcloud.com/userVerification",
+            "url": "https://nkanaapi.herokuapp.com/userVerification",
             "method": "POST",
             "headers": {
                 "content-type": "application/json",
